[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ColorSwitchWidget.gd" type="Script" id=1]

[node name="DeviceWidget" type="HBoxContainer"]
margin_right = 135.0
margin_bottom = 31.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 74.0
margin_bottom = 32.0

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 74.0
margin_bottom = 14.0

[node name="NameTitle" type="Label" parent="VBoxContainer/NameContainer"]
margin_right = 46.0
margin_bottom = 14.0
text = "Name: "

[node name="NameLabel" type="Label" parent="VBoxContainer/NameContainer"]
margin_left = 50.0
margin_right = 74.0
margin_bottom = 14.0
text = "N/A"

[node name="TypeContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 74.0
margin_bottom = 32.0

[node name="TypeTitle" type="Label" parent="VBoxContainer/TypeContainer"]
margin_right = 38.0
margin_bottom = 14.0
text = "Type: "

[node name="TypeLabel" type="Label" parent="VBoxContainer/TypeContainer"]
margin_left = 42.0
margin_right = 66.0
margin_bottom = 14.0
text = "N/A"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 78.0
margin_right = 82.0
margin_bottom = 32.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 86.0
margin_right = 161.0
margin_bottom = 32.0

[node name="ColorContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 75.0
margin_bottom = 14.0

[node name="ColorTitle" type="Label" parent="VBoxContainer2/ColorContainer"]
margin_right = 41.0
margin_bottom = 14.0
text = "Color: "

[node name="ColorRect" type="ColorRect" parent="VBoxContainer2/ColorContainer"]
margin_left = 45.0
margin_right = 75.0
margin_bottom = 14.0
rect_min_size = Vector2( 30, 14 )

[node name="CWWContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 18.0
margin_right = 75.0
margin_bottom = 32.0

[node name="CWWTitle" type="Label" parent="VBoxContainer2/CWWContainer"]
margin_right = 38.0
margin_bottom = 14.0
text = "Type: "

[node name="CWWLabel" type="Label" parent="VBoxContainer2/CWWContainer"]
margin_left = 42.0
margin_right = 66.0
margin_bottom = 14.0
text = "N/A"

[node name="Button" type="Button" parent="."]
margin_left = 165.0
margin_right = 228.0
margin_bottom = 32.0
toggle_mode = true
text = "ON/OFF"

[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
